# QM_FFT_Feature_Package

./: .coverage  .dockerignore  .gitignore  Dockerfile  HOW-TO.md  LICENSE  README.md  benchmark_local_variance.py  benchmark_local_variance_large.py  benchmark_temporal_diff.py  benchmark_temporal_diff_large.py  pyproject.toml  setup.py  skip_interpolation_analysis.md  skip_interpolation_benchmark.py  test_nifti_export.py
.github/workflows/: test.yml
QM_FFT_Analysis/: __init__.py
QM_FFT_Analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
QM_FFT_Analysis/config/: feature_params.yaml
QM_FFT_Analysis/docs/: finufft_map_builder.md  workflow_preprocessing_fft.md
QM_FFT_Analysis/examples/: analytical_gradient_example.py  improved_analytical_gradient_example.py
QM_FFT_Analysis/tests/: test_analytical_gradient.py  test_map_builder.py
QM_FFT_Analysis/utils/: __init__.py  analytical_gradient.py  enhanced_features.py  map_analysis.py  map_builder.py  preprocessing.py  progress_wrapper.py
benchmark_output/benchmark_gradient_ana_10000_15/: enhanced.h5
benchmarks/: README.md  benchmark_analytical_gradient.py  benchmark_enhanced_features.py  benchmark_enhanced_only.py  benchmark_excitation_map.py  benchmark_extreme_gradient.py
docs/: analysis_module_guide.md  analytical_gradient_guide.md  analytical_gradient_improvements.md  comprehensive_guide.ipynb  comprehensive_guide.myst.md  enhanced_features_guide.md  map_builder_guide.md  skip_interpolation_guide.md  technical_reference.md  testing.md
notebooks/: preprocessing_mapbuilder_demo.myst.md
tests/: analytical_gradient_no_interp.py  benchmarks.py  test_analytical_gradient.py  test_analytical_gradient_optimized.py  test_enhanced_features.py  test_integration.py  test_map_analysis.py  test_optimized_gradient.py  test_preprocessing.py
tests/data/output/anisotropy_test/: data.h5  enhanced.h5
(+30 files in other folders)
